# mandelbrot

./: README.md
julia/: amd.jl  multithread.jl  simple.jl
python/jax/amd/: pyproject.toml
